Fixed overlapping for boxes.

--- a/module2/style.css
+++ b/module2/style.css
@@ -4,57 +4,57 @@
     margin: 0px;
     padding: 0px;
 }
-
 h1
 {
     font-family: Calibri, sans-serif, Arial, Helvetica;
     text-align: center;
     padding: 30px 0px 10px 0px;
 }
-
 .menuItems
 {
     /*border: 3px solid green;*/
     width: 100%;
     height: 350px;    
 }
-
+h2 {
+    display: inline-block;
+    border-left: 3px solid black;
+    border-bottom: 3px solid black;
+    padding: 5px;
+    font-size: 22px;
+    width: 150px;
+    text-align: center;
+    margin-top: -13px;    
+    position: absolute;
+    right: 0px;
+    top: 13px;    
+}
 .box
 {    
-	border: 3px solid black;    
-	height: 60%;
-    position: relative;    
-    background: gray;
-    float: left;    
+	/*border: 3px solid black;*/
+	/*height: 60%; causes boxes to overlap*/    
     margin-left:10px;    
     margin-top: 20px;
     
 }
-.boxTitle
-{
-    border-left: 3px solid black;
-    border-bottom: 3px solid black;    
-    text-align: center;  
-    padding: 3px 0px 30px 0px;    
-    width: 40%;
-    height: 10px;
-    
-    float:right;    
-    font-weight: bold;
-    font-size: 20px;
-}
-    
+.section {
+    background-color: lightgray;
+    border: 3px solid black;
+    position: relative;  
+    float: left;
+    margin-right: 15px;
+    margin-left: auto;
+    margin-bottom: auto;
+    padding: 50px 20px 20px 20px;    
+    box-sizing: border-box;    
+    /*min-width: 300px;
+    min-height: 200px;  causes overlap
+    overflow: hidden;*/
+}       
 .boxContent
 {
-    font-family: sans-serif, Calibri, Arial, Helvetica;
-    font-size: 18px;
-    text-align: justify;      
-    position: absolute;
-    top:40px;
-    margin: 10px;
-    /*border: 3px solid lightblue;*/
+    text-align: justify; 
 }
-    
 .chicken
 {
     background: hotpink;
@@ -91,8 +91,7 @@ h1
     {        
         width: 48%;
         float: left;
-    }
-    
+    }    
 }
 
 @media(max-width: 767px)
@@ -100,6 +99,6 @@ h1
     .col-sm-12
     {   
         width: 97%;
-        float: left;
+        float: left;        
     }    
 }
